file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/kpDB" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/")

function(add_test_rad TEST_NAME)
  if(PELE_ENABLE_MPI)
    set(MPI_COMMANDS "${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS}")
  endif()
  add_executable(${TEST_NAME}.exe tst${TEST_NAME}.cpp)
  target_link_libraries(${TEST_NAME}.exe PRIVATE AMReX::amrex)
  target_include_directories(${TEST_NAME}.exe PRIVATE ${CMAKE_SOURCE_DIR}/Submodules/PelePhysics/Source/Radiation)
  add_test(NAME ${TEST_NAME} COMMAND bash -c "set -o pipefail && ${MPI_COMMANDS} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.exe ${MPIEXEC_POSTFLAGS} ${CMAKE_CURRENT_SOURCE_DIR}/inputs/inputs.tst${TEST_NAME} 2>&1 | tee ${TEST_NAME}.log")
  set_tests_properties(${TEST_NAME} PROPERTIES TIMEOUT 7200 LABELS "regression" ATTACHED_FILES "${CURRENT_TEST_BINARY_DIR}/${TEST_NAME}.log")

  if(("${TEST_NAME}" STREQUAL "POneMultiAF") OR ("${TEST_NAME}" STREQUAL "POneMulti")) 
    add_test(NAME ${TEST_NAME}_LevbyLev COMMAND bash -c "set -o pipefail && ${MPI_COMMANDS} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.exe ${MPIEXEC_POSTFLAGS} ${CMAKE_CURRENT_SOURCE_DIR}/inputs/inputs.tst${TEST_NAME}LevbyLev 2>&1 | tee ${TEST_NAME}_LevbyLev.log")
    set_tests_properties(${TEST_NAME}_LevbyLev PROPERTIES TIMEOUT 7200 LABELS "regression" ATTACHED_FILES "${CURRENT_TEST_BINARY_DIR}/${TEST_NAME}_LevbyLev.log")
  endif()

  if(PELE_ENABLE_CUDA)
    setup_target_for_cuda_compilation(${TEST_NAME}.exe)
  endif()
endfunction(add_test_rad)

if(PELE_ENABLE_EB)
  add_test_rad(POneSingleEB)
  add_test_rad(POneMultiEB)
else()
  add_test_rad(POneSingle)
  add_test_rad(POneSingleAF)
  add_test_rad(POneMultiAF)
  if(PELE_DIM GREATER 2)
    add_test_rad(POneMulti)
  endif()
endif()
